// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-content-tree should render with custom props and sample nodes 1`] = `
<modus-wc-content-tree class="my-tree" role="tree">
  <modus-wc-tree-menu selection-mode="single">
    <!---->
    <ul aria-label="Content tree" aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
      <modus-wc-tree-item>
        <!---->
        <li aria-selected="false" class="modus-wc-content-tree-family-active modus-wc-content-tree-parent modus-wc-menu-item modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
          <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
            <div class="modus-wc-menu-item-content">
              <div class="modus-wc-content-tree-node-start" slot="start">
                <modus-wc-button>
                  <!---->
                  <button aria-expanded="true" aria-label="Collapse Project Files" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                    <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
                      <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                        expand_more
                      </i>
                    </modus-wc-icon>
                  </button>
                </modus-wc-button>
                <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
                  <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
                    folder_closed
                  </i>
                </modus-wc-icon>
              </div>
              <div class="modus-wc-menu-item-labels">
                <div>
                  Project Files
                </div>
              </div>
              <div class="modus-wc-content-tree-actions" slot="end">
                <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                  <!---->
                  <modus-wc-button>
                    <!---->
                    <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Project Files" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                      <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                        <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                          more_vertical
                        </i>
                      </modus-wc-icon>
                    </button>
                  </modus-wc-button>
                  <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                    <modus-wc-menu selection-mode="single">
                      <!---->
                      <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                        <div slot="menu">
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Edit name
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Duplicate
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add New Above
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add New Below
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add Child Node
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Delete
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                        </div>
                      </ul>
                    </modus-wc-menu>
                  </div>
                </modus-wc-dropdown-menu>
              </div>
            </div>
          </div>
          <modus-wc-tree-menu class="modus-wc-menu-submenu" selection-mode="single">
            <!---->
            <ul aria-orientation="vertical" class="modus-wc-menu-dropdown modus-wc-menu-dropdown-show" role="menu">
              <modus-wc-tree-item>
                <!---->
                <li aria-selected="false" class="modus-wc-menu-item modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
                  <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
                    <div class="modus-wc-menu-item-content">
                      <div class="modus-wc-content-tree-node-start" slot="start">
                        <span aria-hidden="true" class="modus-wc-content-tree-toggle-spacer"></span>
                        <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
                          <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--md" tabindex="-1">
                            info
                          </i>
                        </modus-wc-icon>
                      </div>
                      <div class="modus-wc-menu-item-labels">
                        <div>
                          Overview
                        </div>
                      </div>
                      <div class="modus-wc-content-tree-actions" slot="end">
                        <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                          <!---->
                          <modus-wc-button>
                            <!---->
                            <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Overview" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                              <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                                <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                                  more_vertical
                                </i>
                              </modus-wc-icon>
                            </button>
                          </modus-wc-button>
                          <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                            <modus-wc-menu selection-mode="single">
                              <!---->
                              <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                                <div slot="menu">
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Edit name
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Duplicate
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add New Above
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add New Below
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add Child Node
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Delete
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                </div>
                              </ul>
                            </modus-wc-menu>
                          </div>
                        </modus-wc-dropdown-menu>
                      </div>
                    </div>
                  </div>
                </li>
              </modus-wc-tree-item>
              <modus-wc-tree-item>
                <!---->
                <li aria-disabled="" aria-selected="false" class="modus-wc-menu-item modus-wc-menu-item-disabled modus-wc-menu-item-lg" role="menuitemradio" tabindex="-1">
                  <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
                    <div class="modus-wc-menu-item-content">
                      <div class="modus-wc-content-tree-node-start" slot="start">
                        <span aria-hidden="true" class="modus-wc-content-tree-toggle-spacer"></span>
                      </div>
                      <div class="modus-wc-menu-item-labels">
                        <div>
                          Disabled Leaf
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </modus-wc-tree-item>
              <modus-wc-tree-item>
                <!---->
                <li aria-selected="false" class="modus-wc-content-tree-parent modus-wc-menu-item modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
                  <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
                    <div class="modus-wc-menu-item-content">
                      <div class="modus-wc-content-tree-node-start" slot="start">
                        <modus-wc-button>
                          <!---->
                          <button aria-expanded="true" aria-label="Collapse Resources" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                            <modus-wc-icon class="modus-wc-flex modus-wc-items-center">
                              <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                                expand_more
                              </i>
                            </modus-wc-icon>
                          </button>
                        </modus-wc-button>
                      </div>
                      <div class="modus-wc-menu-item-labels">
                        <div>
                          Resources
                        </div>
                      </div>
                      <div class="modus-wc-content-tree-actions" slot="end">
                        <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                          <!---->
                          <modus-wc-button>
                            <!---->
                            <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Resources" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                              <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                                <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                                  more_vertical
                                </i>
                              </modus-wc-icon>
                            </button>
                          </modus-wc-button>
                          <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                            <modus-wc-menu selection-mode="single">
                              <!---->
                              <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                                <div slot="menu">
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Edit name
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Duplicate
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add New Above
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add New Below
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Add Child Node
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                  <modus-wc-menu-item>
                                    <!---->
                                    <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                      <button tabindex="-1" type="button">
                                        <div class="modus-wc-menu-item-content">
                                          <div class="modus-wc-menu-item-labels">
                                            <div>
                                              Delete
                                            </div>
                                          </div>
                                        </div>
                                      </button>
                                    </li>
                                  </modus-wc-menu-item>
                                </div>
                              </ul>
                            </modus-wc-menu>
                          </div>
                        </modus-wc-dropdown-menu>
                      </div>
                    </div>
                  </div>
                  <modus-wc-tree-menu class="modus-wc-menu-submenu" selection-mode="single">
                    <!---->
                    <ul aria-orientation="vertical" class="modus-wc-menu-dropdown modus-wc-menu-dropdown-show" role="menu">
                      <modus-wc-tree-item>
                        <!---->
                        <li aria-selected="false" class="modus-wc-menu-item modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
                          <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
                            <div class="modus-wc-menu-item-content">
                              <div class="modus-wc-content-tree-node-start" slot="start">
                                <span aria-hidden="true" class="modus-wc-content-tree-toggle-spacer"></span>
                              </div>
                              <div class="modus-wc-menu-item-labels">
                                <div>
                                  Specifications
                                </div>
                              </div>
                              <div class="modus-wc-content-tree-actions" slot="end">
                                <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                                  <!---->
                                  <modus-wc-button>
                                    <!---->
                                    <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Specifications" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                                      <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                                        <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                                          more_vertical
                                        </i>
                                      </modus-wc-icon>
                                    </button>
                                  </modus-wc-button>
                                  <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                                    <modus-wc-menu selection-mode="single">
                                      <!---->
                                      <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                                        <div slot="menu">
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Edit name
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Duplicate
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add New Above
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add New Below
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add Child Node
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Delete
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                        </div>
                                      </ul>
                                    </modus-wc-menu>
                                  </div>
                                </modus-wc-dropdown-menu>
                              </div>
                            </div>
                          </div>
                        </li>
                      </modus-wc-tree-item>
                      <modus-wc-tree-item>
                        <!---->
                        <li aria-selected="true" class="modus-wc-menu-item modus-wc-menu-item-active modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
                          <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
                            <div class="modus-wc-menu-item-content">
                              <div class="modus-wc-content-tree-node-start" slot="start">
                                <span aria-hidden="true" class="modus-wc-content-tree-toggle-spacer"></span>
                              </div>
                              <div class="modus-wc-menu-item-labels">
                                <div>
                                  Search Index
                                </div>
                              </div>
                              <div class="modus-wc-content-tree-actions" slot="end">
                                <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                                  <!---->
                                  <modus-wc-button>
                                    <!---->
                                    <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Search Index" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                                      <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                                        <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                                          more_vertical
                                        </i>
                                      </modus-wc-icon>
                                    </button>
                                  </modus-wc-button>
                                  <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                                    <modus-wc-menu selection-mode="single">
                                      <!---->
                                      <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                                        <div slot="menu">
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Edit name
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Duplicate
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add New Above
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add New Below
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Add Child Node
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                          <modus-wc-menu-item>
                                            <!---->
                                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                                              <button tabindex="-1" type="button">
                                                <div class="modus-wc-menu-item-content">
                                                  <div class="modus-wc-menu-item-labels">
                                                    <div>
                                                      Delete
                                                    </div>
                                                  </div>
                                                </div>
                                              </button>
                                            </li>
                                          </modus-wc-menu-item>
                                        </div>
                                      </ul>
                                    </modus-wc-menu>
                                  </div>
                                </modus-wc-dropdown-menu>
                              </div>
                            </div>
                          </div>
                        </li>
                      </modus-wc-tree-item>
                    </ul>
                  </modus-wc-tree-menu>
                </li>
              </modus-wc-tree-item>
            </ul>
          </modus-wc-tree-menu>
        </li>
      </modus-wc-tree-item>
      <modus-wc-tree-item>
        <!---->
        <li aria-selected="false" class="modus-wc-menu-item modus-wc-menu-item-lg" role="menuitemradio" tabindex="0">
          <div class="modus-wc-menu-item-interactive" role="presentation" tabindex="-1">
            <div class="modus-wc-menu-item-content">
              <div class="modus-wc-content-tree-node-start" slot="start">
                <span aria-hidden="true" class="modus-wc-content-tree-toggle-spacer"></span>
              </div>
              <div class="modus-wc-menu-item-labels">
                <div>
                  Settings
                </div>
              </div>
              <div class="modus-wc-content-tree-actions" slot="end">
                <modus-wc-dropdown-menu class="modus-wc-dropdown-menu">
                  <!---->
                  <modus-wc-button>
                    <!---->
                    <button aria-expanded="false" aria-haspopup="true" aria-label="Actions for Settings" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-md modus-wc-btn-neutral modus-wc-btn-square" tabindex="0" type="button">
                      <modus-wc-icon class="modus-wc-flex modus-wc-items-center" slot="button">
                        <i aria-hidden="true" class="modus-icons modus-wc-icon modus-wc-icon--sm" tabindex="-1">
                          more_vertical
                        </i>
                      </modus-wc-icon>
                    </button>
                  </modus-wc-button>
                  <div aria-hidden="" class="menu-wrapper" style="position: absolute; top: 0px; left: 0px; z-index: 1000; visibility: hidden; opacity: 0; pointer-events: none;">
                    <modus-wc-menu selection-mode="single">
                      <!---->
                      <ul aria-orientation="vertical" class="modus-wc-menu modus-wc-menu--bordered modus-wc-menu-lg modus-wc-w-full" role="menu">
                        <div slot="menu">
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Edit name
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Duplicate
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add New Above
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add New Below
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Add Child Node
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                          <modus-wc-menu-item>
                            <!---->
                            <li class="modus-wc-menu-item modus-wc-menu-item-md" role="menuitem" tabindex="0">
                              <button tabindex="-1" type="button">
                                <div class="modus-wc-menu-item-content">
                                  <div class="modus-wc-menu-item-labels">
                                    <div>
                                      Delete
                                    </div>
                                  </div>
                                </div>
                              </button>
                            </li>
                          </modus-wc-menu-item>
                        </div>
                      </ul>
                    </modus-wc-menu>
                  </div>
                </modus-wc-dropdown-menu>
              </div>
            </div>
          </div>
        </li>
      </modus-wc-tree-item>
    </ul>
  </modus-wc-tree-menu>
  <modus-wc-modal>
    <!---->
    <dialog aria-label="Confirm delete" class="modus-wc-modal" id="content-tree-delete-2">
      <div class="modus-wc-modal-box">
        <div class="modus-wc-font-bold modus-wc-modal-header modus-wc-text-lg">
          <span slot="header">
            Are you sure you want to delete?
          </span>
          <div class="modus-wc-modal-top-icon-buttons">
            <modus-wc-button>
              <!---->
              <button aria-label="Close modal" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-primary modus-wc-btn-sm modus-wc-btn-square" tabindex="0" type="button">
                <svg aria-hidden="true" fill="currentColor" tabindex="-1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                  <path d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"></path>
                </svg>
              </button>
            </modus-wc-button>
          </div>
        </div>
        <div class="modus-wc-modal-content modus-wc-py-4">
          <div slot="content">
            <modus-wc-typography>
              <!---->
              <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
                <slot-fb>
                  This action cannot be undone.
                </slot-fb>
              </p>
            </modus-wc-typography>
          </div>
        </div>
        <div class="modus-wc-modal-action">
          <div class="modus-wc-content-tree-modal-footer" slot="footer">
            <modus-wc-button>
              <!---->
              <button class="modus-wc-btn modus-wc-btn-neutral modus-wc-btn-outline modus-wc-btn-sm" tabindex="0" type="button">
                No
              </button>
            </modus-wc-button>
            <modus-wc-button>
              <!---->
              <button class="modus-wc-btn modus-wc-btn-error modus-wc-btn-filled modus-wc-btn-sm" tabindex="0" type="button">
                Yes
              </button>
            </modus-wc-button>
          </div>
        </div>
      </div>
    </dialog>
  </modus-wc-modal>
</modus-wc-content-tree>
`;

exports[`modus-wc-content-tree should render with default props 1`] = `
<modus-wc-content-tree role="tree">
  <modus-wc-tree-menu selection-mode="single">
    <!---->
    <ul aria-label="Content tree" aria-orientation="vertical" class="modus-wc-menu modus-wc-menu-md modus-wc-w-full" role="menu"></ul>
  </modus-wc-tree-menu>
  <modus-wc-modal>
    <!---->
    <dialog aria-label="Confirm delete" class="modus-wc-modal" id="content-tree-delete-0">
      <div class="modus-wc-modal-box">
        <div class="modus-wc-font-bold modus-wc-modal-header modus-wc-text-lg">
          <span slot="header">
            Are you sure you want to delete?
          </span>
          <div class="modus-wc-modal-top-icon-buttons">
            <modus-wc-button>
              <!---->
              <button aria-label="Close modal" class="modus-wc-btn modus-wc-btn-borderless modus-wc-btn-primary modus-wc-btn-sm modus-wc-btn-square" tabindex="0" type="button">
                <svg aria-hidden="true" fill="currentColor" tabindex="-1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                  <path d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4"></path>
                </svg>
              </button>
            </modus-wc-button>
          </div>
        </div>
        <div class="modus-wc-modal-content modus-wc-py-4">
          <div slot="content">
            <modus-wc-typography>
              <!---->
              <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
                <slot-fb>
                  This action cannot be undone.
                </slot-fb>
              </p>
            </modus-wc-typography>
          </div>
        </div>
        <div class="modus-wc-modal-action">
          <div class="modus-wc-content-tree-modal-footer" slot="footer">
            <modus-wc-button>
              <!---->
              <button class="modus-wc-btn modus-wc-btn-neutral modus-wc-btn-outline modus-wc-btn-sm" tabindex="0" type="button">
                No
              </button>
            </modus-wc-button>
            <modus-wc-button>
              <!---->
              <button class="modus-wc-btn modus-wc-btn-error modus-wc-btn-filled modus-wc-btn-sm" tabindex="0" type="button">
                Yes
              </button>
            </modus-wc-button>
          </div>
        </div>
      </div>
    </dialog>
  </modus-wc-modal>
</modus-wc-content-tree>
`;
